[project]
name = "gnssraw"
version = "0.1.0"
description = "GNSS RINEX observation plotting and raw measurement analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
	{ name = "torupa", email = "xpt77@outlook.com" }
]
dependencies = [
	"georinex>=1.16.1",
	"matplotlib>=3.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Optional: uv-specific settings can go here if needed in future
#[tool.uv]
## Example: set custom index or enable preview features
## index-url = "https://pypi.org/simple"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.14.10",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.14.1",
]

[tool.mypy]
# Target Python version per project
python_version = "3.9"
# Check only our package by default
packages = ["app"]
# Exclude misc utilities from CI type checking
exclude = "(^|/)misc/"
# Avoid duplicate module mapping when running in environments that add extra roots
explicit_package_bases = true
# Third-party libs without type stubs
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
